# rpi_camera_ip

./: .gitignore  CMakeLists.txt  Features.md  README.md  sujet.md
Client/: CMakeLists.txt  IHM  IHM.glade  Main.c  ReadMe.md  ihm.c
Client/resources/: IHM
Client/src/: Main.c  ihm.c
Rpi/: ReadMe.md
Server/: CMakeLists.txt  Main.c  ReadMe.md  SingleCapture.c  gpioManager.c  libCamera.c
Server/include/: libCamera.h
Server/src/: Main.c  libCamera.c
